--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-frame-component": "^5.2.3",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^2.1.0"
